# body_interact_game

./: CMakeLists.txt  README.md  package.xml
include/body_interact_game/: body_analizer.hpp  body_interact_game.hpp  pose_generator.hpp  pose_receiver.hpp  scorer.hpp  visualizer.hpp
launch/: body_interact_game.launch
msg/: Score.msg
src/: body_interact_game_manager_node.cpp  body_interact_game_node.cpp  score_viewer_node.cpp
src/body_interact_game/: body_analizer.cpp  body_interact_game.cpp  pose_generator.cpp
