<?xml version="1.0"?>
<package format="2">
  <name>body_interact_game</name>
  <version>0.1.0</version>
  <description>The body_interact_game package</description>

  <maintainer email="o111027y@mail.kyutech.jp">Doi Yusuke</maintainer>

  <license>BSD</license>
  <url type="website">http://github.com/forno/body_interact_game</url>

  <author email="o111027y@mail.kyutech.jp">Doi Yusuke</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>rviz_visual_tools</depend> <!-- for debuging -->
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
</package>
